--- a/tables/model_overview.tex
+++ b/tables/model_overview.tex
@@ -21,7 +21,7 @@ XGBoost machine learning model + SHAP model for explianability. &
 
 Age\newline\vspace{3pt}
 Arrival-to-scan time\newline\vspace{3pt}
-Onset during sleep?\newline\vspace{3pt}
+Onset during sleep (Y/N)\newline\vspace{3pt}
 Onset time type (precise/estimated)\newline\vspace{3pt}
 Onset-to-arrival time\newline\vspace{3pt}
 Pre-stroke disability (mRS)\newline\vspace{3pt}
@@ -30,7 +30,7 @@ Stroke team\newline\vspace{3pt}
 Stroke type\newline\vspace{3pt}
 Use of anticoagulants for atrial fibrillation & 
 
-Probability of receiving thrombolysis at attended stroke team and 25 \textit{benchmark} stroke teams \\
+Probability of receiving thrombolysis at attended stroke team and 25 \textit{benchmark} stroke teams. \\
 
 \hline
 
@@ -52,7 +52,7 @@ Pre-stroke disability (mRS)\newline\vspace{3pt}
 Stroke severity\newline\vspace{3pt}
 Stroke team\newline &
 
-Disability/death distribution (can be estimated with/without thrombolysis for any patient) \\
+Disability/death distribution (can be estimated with/without thrombolysis for any patient). \\
 
 \hline
 
@@ -67,13 +67,14 @@ Models flow patients through each stroke team’s thrombolysis pathway, and pred
 Discrete event simulation (using NumPy) array, coupled with clinical outcome model based on time to thrombolysis. &
 
 Arrival-to-scan time\newline\vspace{3pt}
+Arrive by ambulance (Y/N)\newline\vspace{3pt}
 Onset known (Y/N)\newline\vspace{3pt}
 Onset-to-arrival time\newline\vspace{3pt}
 Scan-to-thrombolysis time\newline\vspace{3pt}
 Stroke team\newline\vspace{3pt}
 Stroke type &
 
-Use of thrombolsyis and number of people mRS 0-1 under various improvement strategies:\newline\vspace{5pt}
+Use of thrombolsyis and number of people mRS 0-1 under various improvement strategies:\newline\vspace{6pt}
 
 1. Current state\newline\vspace{3pt}
 2. Ascertain stroke onset times at performance of 25\textsuperscript{th} percentile stroke team\newline\vspace{3pt}
