--- a/references.bib
+++ b/references.bib
@@ -572,3 +572,20 @@ Based on the census data from Shanxi Province, we investigate stroke risk factor
   year = {2023},
   doi = {10.5281/zenodo.7856495}
 }
+
+
+@article{meretoja_reducing_2012,
+	title = {Reducing in-hospital delay to 20 minutes in stroke thrombolysis},
+	volume = {79},
+	url = {https://www.neurology.org/doi/10.1212/WNL.0b013e31825d6011},
+	doi = {10.1212/WNL.0b013e31825d6011},
+	abstract = {Objectives:Efficacy of thrombolytic therapy for ischemic stroke decreases with time elapsed from symptom onset. We analyzed the effect of interventions aimed to reduce treatment delays in our single-center observational series.Methods:All consecutive ischemic stroke patients treated with IV alteplase (tissue plasminogen activator [tPA]) were prospectively registered in the Helsinki Stroke Thrombolysis Registry. A series of interventions to reduce treatment delays were implemented over the years 1998 to 2011. In-hospital delays were analyzed as annual median door-to-needle time (DNT) in minutes, with interquartile range.Results:A total of 1,860 patients were treated between June 1995 and June 2011, which included 174 patients with basilar artery occlusion (BAO) treated mostly beyond 4.5 hours from symptom onset. In the non-BAO patients, the DNT was reduced annually, from median 105 minutes (65–120) in 1998, to 60 minutes (48–80) in 2003, further on to 20 minutes (14–32) in 2011. In 2011, we treated with tPA 31\% of ischemic stroke patients admitted to our hospital. Of these, 94\% were treated within 60 minutes from arrival. Performing angiography or perfusion imaging doubled the in-hospital delays. Patients with in-hospital stroke or arriving very soon from symptom onset had longer delays because there was no time to prepare for their arrival.Conclusions:With multiple concurrent strategies it is possible to cut the median in-hospital delay to 20 minutes. The key is to do as little as possible after the patient has arrived at the emergency room and as much as possible before that, while the patient is being transported.},
+	number = {4},
+	urldate = {2024-07-08},
+	journal = {Neurology},
+	author = {Meretoja, Atte and Strbian, Daniel and Mustanoja, Satu and Tatlisumak, Turgut and Lindsberg, Perttu J. and Kaste, Markku},
+	month = jul,
+	year = {2012},
+	note = {Publisher: Wolters Kluwer},
+	pages = {306--313},
+}
