--- a/sections/3_intro.tex
+++ b/sections/3_intro.tex
@@ -10,6 +10,8 @@
 
 Stroke remains one of the top three global causes of death and disability \cite{feigin_global_2021}. Despite reductions in age-standardised rates of stroke, ageing populations are driving an increase in the absolute number of strokes \cite{feigin_global_2021}. Across Europe, in 2017, stroke was found to cost healthcare systems \texteuro 27 billion, or 1.7\% of health expenditure \cite{luengo-fernandez_economic_2020}. Thrombolysis with recombinant tissue plasminogen activator, can significantly reduce disability after ischaemic stroke, so long as it is given in the first few hours after stroke onset \cite{emberson_effect_2014}. Despite thrombolysis being of proven benefit in ischaemic stroke, use of thrombolysis varies significantly both between and within European countries \cite{aguiar_de_sousa_access_2019}. In England and Wales the national stroke audit reported that in 2021/22, 20 years on from the original European Medicines Agency licencing of alteplase for acute ischaemic stroke, thrombolysis rates for emergency stroke admissions varied from just 1\% to 28\% between hospitals \cite{sentinel_national_stroke_audit_programme_ssnap_2022}, with a median rate of 10.4\% and an inter-quartile range of 8\%-13\%, against a 2019 NHS England long term plan that 20\% of patients of emergency stroke admissions should be receiving thrombolysis \cite{nhs_long_term_plan_2019}.
 
+The NHS plan for improving stroke care also sets a target that patients should receive thrombolysis within 60 minutes of arrival, but ideally within 20 minutes (12). Whilst this speed of thrombolysis, called door-to-needle time, provides an ambitious target, it has been shown to be achievable as Helsinki University Central Hospital has reported a median door-to-needle time of 20 minutes, with 94\% of patients treated within 60 minutes \cite{meretoja_reducing_2012}.
+
 % 2) What do we know about low and varying use of thrombolysis
 
 Studies have shown that reasons for low and varying thrombolysis rates are multi-factorial. Reasons include late presentation \cite{aguiar_de_sousa_access_2019}, lack of expertise \cite{aguiar_de_sousa_access_2019} or lack of clear protocols or training \cite{carter-jones_stroke_2011}, delayed access to specialists \cite{kamal_delays_2017}, and poor triage by ambulance or emergency department staff \cite{carter-jones_stroke_2011}. For many factors, the establishment of primary stroke centres has been suggested to improve the emergency care of patients with stroke and reduce barriers to thrombolysis \cite{carter-jones_stroke_2011}, with a centralised model of primary stroke centres leading to increased likelihood of thrombolysis \cite{lahr_proportion_2012, morris_impact_2014, hunter_impact_2013}. 
@@ -20,8 +22,26 @@ Based on national audit data from three years of emergency stroke admissions, we
 
 % 3) What do we not know
 
-In our previous work we established that we could predict the use of thrombolysis in patients arriving within 4 hours of known stroke onset with 84.3\% accuracy \cite{allen_use_2022}. We could then ask the question "What if this patient attended another hospital - would they likely be given thrombolysis?" As this was a \emph{`black-box'} decision-forest model we could not effectively explain the relationship between patient level data (`features') and their chance of receiving thrombolysis, or identify and explain the features which different hospitals would differ on.
+In our previous work we established that we could predict the use of thrombolysis in patients arriving within 4 hours of known stroke onset with 84.3\% accuracy \cite{allen_use_2022}. We could then ask the question "What if this patient attended another hospital - would they likely be given thrombolysis?" As this was a \emph{`black-box'} decision-forest model we could not effectively explain the relationship between patient level data (`features') and their chance of receiving thrombolysis, or identify and explain the features which different hospitals would differ on. In that work we were also only predicting thrombolysis choice; we were not examining outcomes after stroke with and without thrombolysis, which left open the question of whether stroke teams with higher thrombolysis use were likely to be achieving better outcomes. Incorporating explainability of predictions, and predicting outcomes were therefore key objectives for the current study.
 
-% 4) How are we addressing what we don't know
+Specific objectives for the current study were:
 
-In this paper, therefore, we seek to use \emph{explainable machine learning} to understand the relationship between patient and hospital features and the use of thrombolysis across England and Wales, and we seek to understand how hospitals differ in their attitudes to use of thrombolysis, and how much difference in use of thrombolysis may be explained by those differences. We use an \emph{eXtreme Gradient Boosting model \cite{chen_xgboost_2016}} (XGBoost) to make predictions and then use an additional \emph{SHapley Additive exPlanations} \cite{lundberg_unified_2017} (SHAP) model to explain the contribution of each feature to the model prediction.
+\begin{enumerate}
+
+    \item \textbf{Prediction of outcomes} (including benefit and risk of thrombolysis) at an individual patient level.
+
+    \item \textbf{Inclusion of a health economics model}, to convert outcomes to Quality of Life Years (QALYs).
+
+    \item \textbf{Improve model transparency and explainability} by 1) model simplification through feature selection, and to 2) the addition of Shapley values to show the contribution of individual features to the prediction \cite{aas_explaining_2020}.
+
+    \item \textbf{Perform patient clustering or sub-setting of patients} to illustrate similarity/differences in thrombolysis decision-making between hospitals.
+
+    \item \textbf{Investigate how well organisation factors (from the SSNAP organisational audit) predict thrombolysis use.}
+
+    \item \textbf{Generation of a web-based dashboard} to allow clinicians to interrogate modelling.
+
+    \item \textbf{Generation of synthetic data and artificial patient vignettes (virtual patients)} for enhanced sharing of the modelling (sharing working code with data).
+
+    \item \textbf{Co-production of project outputs with clinicians} to promote acceptance and use for local quality improvement.
+    
+\end{enumerate}
