Updates from Overleaf

--- a/sections/5_results.tex
+++ b/sections/5_results.tex
@@ -1,5 +1,6 @@
 \section{Results}
 
+\subsection{Descriptive statistics}
 
 \small
 \renewcommand{\arraystretch}{1.3}
@@ -32,45 +33,13 @@ Discharge disability (mRS, mean) & 121 & 2.65 & 0.35 & 1.36 & 2.41 & 2.72 & 2.89
 Proportion discharged mRS 0-2 & 121 & 0.52 & 0.09 & 0.28 & 0.45 & 0.52 & 0.59 & 0.80\tabularnewline
 Proportion discharged mRS 5-6 & 121 & 0.20 & 0.04 & 0.09 & 0.18 & 0.20 & 0.22 & 0.28\tabularnewline
 \bottomrule
+\label{tab:hospital_stats_1}
 \end{longtable}
+\normalsize
 
-
+\small
 \begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
 \caption{Descriptive statistics for patients arriving at each stroke team, for patients arriving within 4 hours of known stroke onset. The table shows summary statistics across all stroke teams.}\\
-\toprule
-\endhead
-Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
-\midrule
-Yearly admissions & 121 & 205 & 92 & 3 & 146 & 199 & 271 & 473\tabularnewline
-Age (mean) & 121 & 75.3 & 2.1 & 66.9 & 74.1 & 75.6 & 76.6 & 80.3\tabularnewline
-Proportion aged 80+ & 121 & 0.43 & 0.06 & 0.24 & 0.39 & 0.43 & 0.47 & 0.67\tabularnewline
-Proportion male & 121 & 0.52 & 0.03 & 0.44 & 0.51 & 0.52 & 0.54 & 0.62\tabularnewline
-Prior disability (mRS, mean) & 121 & 1.09 & 0.25 & 0.46 & 0.91 & 1.07 & 1.24 & 1.68\tabularnewline
-Proportion prior disability (mRS) 0-2 & 121 & 0.79 & 0.06 & 0.65 & 0.76 & 0.79 & 0.83 & 0.93\tabularnewline
-Stroke severity (NIHSS, mean) & 121 & 9.4 & 1.2 & 6.6 & 8.5 & 9.6 & 10.2 & 12.1\tabularnewline
-Proportion with known onset & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
-Onset-to-arrival time (minutes, median) & 121 & 105 & 10 & 85 & 98 & 104 & 111 & 151\tabularnewline
-Proportion arriving within 4 hours known onset & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
-Proportion with precisely known onset & 121 & 0.62 & 0.16 & 0.02 & 0.54 & 0.64 & 0.74 & 0.92\tabularnewline
-Proportion onset during sleep & 121 & 0.05 & 0.05 & 0.00 & 0.01 & 0.03 & 0.06 & 0.30\tabularnewline
-Proportion arrive by ambulance & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
-Call-to-ambulance arrival time (minutes, median) & 110 & 19 & 5 & 8 & 16 & 18 & 21 & 51\tabularnewline
-Ambulance on scene time (median) & 110 & 28 & 4 & 20 & 26 & 28 & 31 & 46\tabularnewline
-Ambulance conveyance time (minutes, median) & 110 & 17 & 4 & 9 & 14 & 16 & 20 & 28\tabularnewline
-Arrival-to-scan time (minutes, median) & 121 & 26 & 11 & 4 & 20 & 26 & 33 & 94\tabularnewline
-Proportion receiving thrombolysis & 121 & 0.299 & 0.070 & 0.132 & 0.250 & 0.288 & 0.342 & 0.527\tabularnewline
-Scan-to-thrombolysis time (minutes, median) & 121 & 34 & 10 & 14 & 27 & 33 & 40 & 75\tabularnewline
-Discharge disability (mRS, mean) & 121 & 2.93 & 0.34 & 1.89 & 2.76 & 2.94 & 3.15 & 3.76\tabularnewline
-Proportion discharged mRS 0-2 & 121 & 0.46 & 0.09 & 0.21 & 0.40 & 0.46 & 0.52 & 0.68\tabularnewline
-Proportion discharged mRS 5-6 & 121 & 0.26 & 0.05 & 0.14 & 0.23 & 0.25 & 0.28 & 0.47\tabularnewline
-\bottomrule
-\end{longtable}
-
-Arrivals by ambulance within 4 hours known stroke onset
-
-
-\begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
-\caption{Descriptive statistics for patients arriving at each stroke team, for patients arriving by ambulance within 4 hours of known stroke onset. The table shows summary statistics across all stroke teams.}\\
 \toprule
 \endhead
 Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
@@ -98,4 +67,41 @@ Discharge disability (mRS, mean) & 121 & 2.81 & 0.35 & 1.51 & 2.61 & 2.85 & 3.04
 Proportion discharged mRS 0-2 & 121 & 0.49 & 0.09 & 0.24 & 0.42 & 0.49 & 0.54 & 0.77\tabularnewline
 Proportion discharged mRS 5-6 & 121 & 0.24 & 0.04 & 0.13 & 0.21 & 0.23 & 0.26 & 0.41\tabularnewline
 \bottomrule
+\label{tab:hospital_stats_2}
 \end{longtable}
+\normalsize
+
+\small
+\begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
+\caption{Descriptive statistics for patients arriving at each stroke team, for patients arriving by ambulance within 4 hours of known stroke onset. The table shows summary statistics across all stroke teams.}\\
+\toprule
+\endhead
+Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
+\midrule
+Yearly admissions & 121 & 205 & 92 & 3 & 146 & 199 & 271 & 473\tabularnewline
+Age (mean) & 121 & 75.3 & 2.1 & 66.9 & 74.1 & 75.6 & 76.6 & 80.3\tabularnewline
+Proportion aged 80+ & 121 & 0.43 & 0.06 & 0.24 & 0.39 & 0.43 & 0.47 & 0.67\tabularnewline
+Proportion male & 121 & 0.52 & 0.03 & 0.44 & 0.51 & 0.52 & 0.54 & 0.62\tabularnewline
+Prior disability (mRS, mean) & 121 & 1.09 & 0.25 & 0.46 & 0.91 & 1.07 & 1.24 & 1.68\tabularnewline
+Proportion prior disability (mRS) 0-2 & 121 & 0.79 & 0.06 & 0.65 & 0.76 & 0.79 & 0.83 & 0.93\tabularnewline
+Stroke severity (NIHSS, mean) & 121 & 9.4 & 1.2 & 6.6 & 8.5 & 9.6 & 10.2 & 12.1\tabularnewline
+Proportion with known onset & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
+Onset-to-arrival time (minutes, median) & 121 & 105 & 10 & 85 & 98 & 104 & 111 & 151\tabularnewline
+Proportion arriving within 4 hours known onset & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
+Proportion with precisely known onset & 121 & 0.62 & 0.16 & 0.02 & 0.54 & 0.64 & 0.74 & 0.92\tabularnewline
+Proportion onset during sleep & 121 & 0.05 & 0.05 & 0.00 & 0.01 & 0.03 & 0.06 & 0.30\tabularnewline
+Proportion arrive by ambulance & 121 & 1.00 & 0.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00\tabularnewline
+Call-to-ambulance arrival time (minutes, median) & 110 & 19 & 5 & 8 & 16 & 18 & 21 & 51\tabularnewline
+Ambulance on scene time (median) & 110 & 28 & 4 & 20 & 26 & 28 & 31 & 46\tabularnewline
+Ambulance conveyance time (minutes, median) & 110 & 17 & 4 & 9 & 14 & 16 & 20 & 28\tabularnewline
+Arrival-to-scan time (minutes, median) & 121 & 26 & 11 & 4 & 20 & 26 & 33 & 94\tabularnewline
+Proportion receiving thrombolysis & 121 & 0.299 & 0.070 & 0.132 & 0.250 & 0.288 & 0.342 & 0.527\tabularnewline
+Scan-to-thrombolysis time (minutes, median) & 121 & 34 & 10 & 14 & 27 & 33 & 40 & 75\tabularnewline
+Discharge disability (mRS, mean) & 121 & 2.93 & 0.34 & 1.89 & 2.76 & 2.94 & 3.15 & 3.76\tabularnewline
+Proportion discharged mRS 0-2 & 121 & 0.46 & 0.09 & 0.21 & 0.40 & 0.46 & 0.52 & 0.68\tabularnewline
+Proportion discharged mRS 5-6 & 121 & 0.26 & 0.05 & 0.14 & 0.23 & 0.25 & 0.28 & 0.47\tabularnewline
+\bottomrule
+\label{tab:hospital_stats_3}
+\end{longtable}
+\normalsize
+
