Add summary table

--- a/references.bib
+++ b/references.bib
@@ -589,3 +589,93 @@ Based on the census data from Shanxi Province, we investigate stroke risk factor
 	note = {Publisher: Wolters Kluwer},
 	pages = {306--313},
 }
+
+
+@article{jarvie_stroke_2024,
+	title = {Stroke physicians' and staff perspectives on machine learning to optimise thrombolysis decision making in stroke: a qualitative study},
+	shorttitle = {Stroke physicians' and staff perspectives on machine learning to optimise thrombolysis decision making in stroke},
+	url = {https://zenodo.org/records/12798067},
+
+	language = {aig},
+	urldate = {2024-07-23},
+	journal = {Zotero},
+	author = {Jarvie, Rachel and Frost, Julia and Pratt-Boyden, Keira and Lang, Iain and Pope, Catherine and James, Martin},
+	month = jul,
+	year = {2024},
+	note = {Publisher: Zenodo},
+	keywords = {Artificial intelligence, Machine learning, Stroke, thrombolysis},
+	file = {Full Text PDF:/home/michael/Zotero/storage/DNC9VR33/Jarvie et al. - 2024 - Stroke physicians' and staff perspectives on machi.pdf:application/pdf},
+}
+
+@misc{pearn_are_2024,
+	title = {Are the patients who would benefit from thrombolysis the ones who are receiving it? {A} machine learning study.},
+	shorttitle = {Are the patients who would benefit from thrombolysis the ones who are receiving it?},
+	url = {https://zenodo.org/records/12798300},
+	doi = {10.5281/zenodo.12798300},
+	urldate = {2024-07-23},
+	publisher = {Zenodo},
+	author = {Pearn, Kerry and Allen, Michael and Laws, Anna and James, Martin},
+	month = jul,
+	year = {2024},
+	file = {Full Text PDF:/home/michael/Zotero/storage/VTDDTDHF/Pearn et al. - 2024 - Are the patients who would benefit from thrombolys.pdf:application/pdf},
+}
+
+@misc{pearn_thrombolysis_2024,
+	title = {Thrombolysis: {Are} the results from the clinical trial meta-analysis seen in real life outcomes?  {A} machine learning study.},
+	shorttitle = {Thrombolysis},
+	url = {https://zenodo.org/records/12798320},
+	doi = {10.5281/zenodo.12798320},
+	urldate = {2024-07-23},
+	publisher = {Zenodo},
+	author = {Pearn, Kerry and Allen, Michael and Laws, Anna and James, Martin},
+	month = jul,
+	year = {2024},
+	file = {Full Text PDF:/home/michael/Zotero/storage/P3UZE9CJ/Pearn et al. - 2024 - Thrombolysis Are the results from the clinical tr.pdf:application/pdf},
+}
+
+@misc{pearn_identifying_2024,
+	title = {Identifying levers for improving thrombolysis use and outcomes – combining clinical pathway simulation and machine learning},
+	url = {https://zenodo.org/records/12798344},
+	doi = {10.5281/zenodo.12798344},
+	urldate = {2024-07-23},
+	publisher = {Zenodo},
+	author = {Pearn, Kerry and Allen, Michael and Laws, Anna and McMeekin, Peter and James, Martin},
+	month = jul,
+	year = {2024},
+	file = {Full Text PDF:/home/michael/Zotero/storage/SUKUH8NA/Pearn et al. - 2024 - Identifying levers for improving thrombolysis use .pdf:application/pdf},
+}
+
+@misc{allen_stroke_2024,
+	title = {Stroke {Audit} {Machine} {Learning} ({SAMueL}-2)},
+	url = {https://zenodo.org/records/12798410},
+	doi = {10.5281/zenodo.12798410},
+	urldate = {2024-07-23},
+	publisher = {Zenodo},
+	author = {Allen, Michael and Pearn, Kerry and Jarvie, Rachel and Laws, Anna and Frost, Julia and Farmer, Leon and McMeekin, Peter and Pope, Catherine and Lang, Iain and Pratt-Boyden, Keira and Everson, Richard and James, Martin},
+	month = jul,
+	year = {2024},
+	file = {Full Text PDF:/home/michael/Zotero/storage/ZYV5MQUI/Allen et al. - 2024 - Stroke Audit Machine Learning (SAMueL-2).pdf:application/pdf},
+}
+
+@article{pearn_what_2023,
+	title = {What would other emergency stroke teams do? {Using} explainable machine learning to understand variation in thrombolysis practice},
+	volume = {8},
+	issn = {2396-9873},
+	shorttitle = {What would other emergency stroke teams do?},
+	url = {https://doi.org/10.1177/23969873231189040},
+	doi = {10.1177/23969873231189040},
+	abstract = {Introduction: The aim of this work was to understand between-hospital variation in thrombolysis use among emergency stroke admissions in England and Wales.
+Patients: A total of 88,928 patients who arrived at all 132 emergency stroke hospitals in England Wales within 4 h of stroke onset, from 2016 to 2018.
+Methods: Machine learning was applied to the Sentinel Stroke National Audit Programme (SSNAP) data set, to learn which patients in each hospital would likely receive thrombolysis. We used XGBoost machine learning models, coupled with a SHAP model for explainability; Shapley (SHAP) values, providing estimates of how patient features, and hospital identity, influence the odds of receiving thrombolysis.
+Results: Thrombolysis use in patients arriving within 4 h of known or estimated stroke onset ranged 7\% -49\% between hospitals. The odds of receiving thrombolysis reduced 9-fold over the first 120 min of arrival-to-scan time, varied 30-fold with stroke severity, reduced 3-fold with estimated rather than precise stroke onset time, fell 6-fold with increasing pre-stroke disability, fell 4-fold with onset during sleep, fell 5-fold with use of anticoagulants, fell 2-fold between 80 and 110 years of age, reduced 3-fold between 120 and 240 min of onset-to-arrival time and varied 13-fold between hospitals. The majority of between-hospital variance was explained by the hospital, rather than the differences in local patient populations.
+Conclusions: Using explainable machine learning, we identified that the majority of the between-hospital variation in thrombolysis use in England and Wales may be explained by differences in in-hospital processes and differences in attitudes to judging suitability for thrombolysis.},
+	language = {en},
+	number = {4},
+	urldate = {2023-12-08},
+	journal = {European Stroke Journal},
+	author = {Pearn, Kerry and Allen, Michael and Laws, Anna and Monks, Thomas and Everson, Richard and James, Martin},
+	month = dec,
+	year = {2023},
+	pages = {956--965},
+	file = {SAGE PDF Full Text:/home/michael/Zotero/storage/2ZTYB7GI/Pearn et al. - 2023 - What would other emergency stroke teams do Using .pdf:application/pdf},
+}
