--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 
 % Packages
-\usepackage[a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
+\usepackage[a4paper, left=1.5cm, right=1.5cm, top=1.5cm, bottom=1.5cm]{geometry}
 \usepackage{authblk} % For author formatting
 \usepackage{caption} % For figure and table captions
 \usepackage{cclicenses} % For creative commons license
@@ -70,7 +70,8 @@
 
 \newpage
 
-\include{sections/3_intro}
+%\include{sections/3_intro}
+\include{sections/4_paper_overview}
 
 
 \include{sections/5_results}
@@ -85,8 +86,8 @@
 
 % Word counts - Don't count these!
 %TC:ignore
-\section{Word counts}
-\detailtexcount{main}
+%\section{Word counts}
+%\detailtexcount{main}
 %TC:endignore
 
 
