--- a/sections/1_title.tex
+++ b/sections/1_title.tex
@@ -1,12 +1,29 @@
-\title{Title}
+\title{Stroke Audit Machine Learning (SAMueL-2)}
+
 
 
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
-\author[1,2]{Kerry Pearn}
+
 \author[*1,2]{Michael Allen}
+\author[1,2]{Kerry Pearn}
+\author[1]{Rachel Jarvie}
+\author[1]{Anna Laws}
+\author[1]{Julia Frost}
+\author[1]{Leon Farmer}
+\author[3]{Peter McMeekin}
+\author[4]{Catherine Pope}
+\author[1]{Iain Lang}
+\author[1]{Keira Pratt-Boyden}
+\author[1]{Richard Everson}
+\author[1,5]{Martin James}
+
+
 \author[1,2]{Martin James}
 
 % Check affiliations - update RDE Name
 \affil[1]{\footnotesize University of Exeter Medical School}
 \affil[2]{\footnotesize NIHR South West Peninsula Applied Research Collaboration (ARC).}
+\affil[3]{\footnotesize Northumbria University}
+\affil[4]{\footnotesize University of Oxford}
+\affil[5]{\footnotesize Royal Devon University Healthcare NHS Foundation Trust}
 \affil[*]{\footnotesize Corresponding author: m.allen@exeter.ac.uk}
