Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -63,21 +63,18 @@
 
 % Ignore title and abstract in word count
 %TC:ignore
-\include{sections/1_title}
+\include{sections/01_title}
 
 \maketitle
 %TC:endignore
 
 \newpage
-
-%\include{sections/3_intro}
-\include{sections/4_paper_overview}
-
-
-\include{sections/5_results}
+\include{sections/03_intro}
+\include{sections/04_study_pathway}
+\include{sections/05_paper_overview}
 
 
-\section{References}
+
 \bibliographystyle{naturemag}
 %\bibliographystyle{plainnat}
 %\bibliographystyle{unsrt}
