Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -69,9 +69,10 @@
 %TC:endignore
 
 \newpage
-\include{sections/03_intro}
-\include{sections/04_study_pathway}
-\include{sections/05_paper_overview}
+\input{sections/03_intro}
+\input{sections/04_study_pathway}
+\input{sections/06_data}
+\input{sections/05_paper_overview}
 
 
 
