--- a/sections/05_paper_overview.tex
+++ b/sections/05_paper_overview.tex
@@ -1,5 +1,7 @@
 \section{Overview of associated papers}
 
+Table \ref{tab:papers} provides an overview of five papers that describe the detailed work of this project.
+
 \begin{landscape}
 \RaggedRight
 \small
