--- a/sections/06_data.tex
+++ b/sections/06_data.tex
@@ -37,3 +37,45 @@ The following data fields from SSNAP were used in the modelling:
     \item \textit{Disability on discharge}: mRS (0-6) on discharge, includes death (mRS 6) during admission.
     
 \end{itemize}
+
+\subsubsection{Ethics}
+
+For modelling, as we were using anonymised secondary data, collected for national audit, individual consent is not required. SSNAP has approval under section 251 of the NHS Health and Social Care Act (2006) to collect patient level data on the first six months of patient care (ECC 6- 02(FT3)/2012), without requiring individual patient consent. Access to SSNAP data is managed by the UK Healthcare Quality Improvement Partnership (HQIP), with this project being approved by HQIP (HQIP303). More information on SSNAPs use of patient data may be found at: \url{https://www.strokeaudit.org/ SupportFiles/Documents/Patient-area-documents/Fair-processingstatement-for-patients-v7-0.aspx}
+
+As we are using anonymised secondary data, collected for national audit, used for service evaluation and improvement, no ethical approval is required (confirmed using the NHS Health Research Authority decision aid: https://www.hra-decisiontools.org.uk/ethics/).
+
+\subsection{Qualitative data}
+
+Qualitative research used a combination of observations, interviews and documentary analysis.
+
+Semi-structured interviews were conducted with 20 participants from the three observation sites and five key informants (senior clinicians/managers involved in stroke initiatives) based at other sites. The number of participants by role was:
+
+\begin{itemize}
+
+    \item \textit{Consultant}: 11 Stroke, 3 Emergency Department (ED), 1 Care of the Elderly
+
+    \item \textit{Associate Specialist Doctor (ED)}: 1 ED
+
+    \item \textit{Registrar}: 1 Stroke, 1 ED 
+
+    \item \textit{Stroke Assessor \& Nurse}: 2
+
+    \item \textit{Stroke Nurse}: 1
+    
+    \item \textit{Advanced Clinical Practitioner (Stroke)}: 1
+
+    \item \textit{Stroke Unit Administrator}: 1
+
+    \item \textit{IT Co-ordinator (Stroke)}: 1
+
+    \item \textit{Integrated Stroke Delivery Network manager}: 1
+    
+\end{itemize}
+
+Observation of healthcare professionals and work practices involved in the acute stroke pathway in three NHS Trusts (acute hospitals) in England (hereafter referred to as Sites A, B and C) was conducted. We used SSNAP data to purposefully select hospitals with low rates of thrombolysis and ensured they had differing stroke pathways and were geographically dispersed. 184 hours of focussed observation across the three sites comprising a variety of day/evening/night and weekend shifts was conducted, observing stroke care as well as clinical governance and multi-disciplinary team stroke review and SSNAP review meetings. Additionally, observation of online meetings of Integrated Stroke Delivery Networks (ISDNs) and other organisations with strategic overview of stroke services in the NHS took place, with a focus on thrombolysis. 
+
+A third source of data was documents: we collected Trust-level documents (such as thrombolysis protocols and quality improvement (QI) initiative documentation); policy and strategy documents at ISDN level; computer modellers’ presentations to stakeholders (clinicians, senior managers, policymakers); modelling team summaries of feedback from stakeholders.
+
+\subsubsection{Ethics}
+
+HRA \& HCRW approval was provided by the Essex Research Ethics Committee in August 2023 (IRAS 322303; REC reference 23/EE/0124).
