Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -68,11 +68,19 @@
 \maketitle
 %TC:endignore
 
+\tableofcontents
+
 \newpage
-\input{sections/03_intro}
-\input{sections/04_study_pathway}
-\input{sections/06_data}
-\input{sections/05_paper_overview}
+\include{sections/03_intro}
+\include{sections/04_study_pathway}
+\include{sections/06_data}
+\include{sections/05_paper_overview}
+\include{sections/11_paper_1}
+\include{sections/12_paper_2}
+\include{sections/13_paper_3}
+\include{sections/14_paper_4}
+\include{sections/15_paper_5}
+\include{sections/22_clinical_discussion}
 
 
 
