Add qual paper overview

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@
 \include{sections/13_paper_3}
 \include{sections/14_paper_4}
 \include{sections/15_paper_5}
-\include{sections/22_clinical_discussion}
+\include{sections/21_discussion}
 
 
 
