--- a/sections/06_data.tex
+++ b/sections/06_data.tex
@@ -46,7 +46,7 @@ For modelling, as we were using anonymised secondary data, collected for nationa
 
 As we are using anonymised secondary data, collected for national audit, used for service evaluation and improvement, no ethical approval is required (confirmed using the NHS Health Research Authority decision aid: https://www.hra-decisiontools.org.uk/ethics/).
 
-\subsection{Qualitative data}
+\subsection{Data for qualitative research}
 
 Qualitative research used a combination of observations, interviews and documentary analysis. See section \ref{sec:paper_1} for further details.
 
