--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
 \beginsupplement
 
 %TC:igno
-\include{sections/50_supplement}
+%\include{sections/50_supplement}
 %TC:endignore
 
 % Word counts - Don't count these!
